# weewx-home-assistant

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  LOCALE_OVERRIDES.md  MANIFEST.in  PARTIAL_LOCALIZATION_IMPLEMENTATION.md  pyproject.toml  requirements-test.txt  weewx-ha.conf.example
.github/workflows/: build.yml  codeql-analysis.yml
src/weewx_ha/: config_publisher.py  controller.py  locale_loader.py  state_publisher.py  utils.py
src/weewx_ha/locales/: PARTIAL_LOCALIZATION.md  README.md  cs_enums.yaml.example  enums.yaml  enums_cs.yaml  sensors.yaml  sensors_cs.yaml  units.yaml
src/weewx_ha/models/: extension_config.py  station_info.py
tests/: test_locale_overrides.py
